Refactorización del sistema, empaquetado funcional, el resto debe ser modificado
